apps/base/joplin/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: joplin
  namespace: app-joplin

spec:
  selector:
    matchLabels:
      app: joplin
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: joplin
    spec:
      containers:
        - name: joplin
          image: joplin/server:3.5.2
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 22300
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 22300
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 22300
