apps/base/joplin/joplin.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: joplin
  namespace: app-joplin

spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: joplin
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: joplin
    spec:
      containers:
        - name: joplin
          image: joplin/server:3.5.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 22300
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 22300
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 22300
              name: http
      dnsConfig:
        options:
          - name: ndots
            value: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: joplin
  namespace: app-joplin

spec:
  ports:
    - name: http
      port: 22300
      targetPort: http
  selector:
    app: joplin
