apps/base/joplin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: joplin
  namespace: app-joplin

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`joplin.cluster.arpa`)
      kind: Rule
      services:
        - name: joplin
          namespace: app-joplin
          port: 22300
  tls:
    secretName: traefik-tls
